After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 721642 - Assorted fixes from coverity scan
Assorted fixes from coverity scan
Status: RESOLVED FIXED
Product: grilo
Classification: Other
Component: plugins
unspecified
Other All
: Normal normal
: ---
Assigned To: grilo-maint
grilo-maint
Depends on:
Blocks:
 
 
Reported: 2014-01-06 16:32 UTC by Bastien Nocera
Modified: 2014-01-20 09:32 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
raitv: Fix possible out-of-bounds array access (1.58 KB, patch)
2014-01-06 16:33 UTC, Bastien Nocera
committed Details | Review
raitv: Fix bizarre spacing in function call (812 bytes, patch)
2014-01-06 16:33 UTC, Bastien Nocera
committed Details | Review
youtube: Fix potential crasher (1.32 KB, patch)
2014-01-06 16:33 UTC, Bastien Nocera
committed Details | Review
tmdb: Fix reversed return arg check (1.26 KB, patch)
2014-01-06 16:33 UTC, Bastien Nocera
committed Details | Review
jamendo: Fix potential uninitialised use (826 bytes, patch)
2014-01-06 16:33 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2014-01-06 16:32:53 UTC
.
Comment 1 Bastien Nocera 2014-01-06 16:33:06 UTC
Created attachment 265453 [details] [review]
raitv: Fix possible out-of-bounds array access

get_theme_index_from_id() might return a negative value, which might
end up causing out-of-bounds array accesses.

Instead, assert when get_theme_index_from_id() fails to show that
an internal error occurred.
Comment 2 Bastien Nocera 2014-01-06 16:33:10 UTC
Created attachment 265454 [details] [review]
raitv: Fix bizarre spacing in function call
Comment 3 Bastien Nocera 2014-01-06 16:33:15 UTC
Created attachment 265455 [details] [review]
youtube: Fix potential crasher

ytsrc might be uninitialised, so abort early in that case when called
from read_url_async().
Comment 4 Bastien Nocera 2014-01-06 16:33:20 UTC
Created attachment 265456 [details] [review]
tmdb: Fix reversed return arg check

grl_tmdb_source_may_resolve() was checking for missing_keys the
wrong way around.
Comment 5 Bastien Nocera 2014-01-06 16:33:25 UTC
Created attachment 265457 [details] [review]
jamendo: Fix potential uninitialised use
Comment 6 Juan A. Suarez Romero 2014-01-20 09:15:42 UTC
Comment on attachment 265453 [details] [review]
raitv: Fix possible out-of-bounds array access

commit 32a0f4393213faf27f255bf9dac7d920778de36e
Author: Bastien Nocera <hadess@hadess.net>
Date:   Mon Jan 6 17:14:32 2014 +0100

    raitv: Fix possible out-of-bounds array access
    
    get_theme_index_from_id() might return a negative value, which might
    end up causing out-of-bounds array accesses.
    
    Instead, assert when get_theme_index_from_id() fails to show that
    an internal error occurred.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=721642

 src/raitv/grl-raitv.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
Comment 7 Juan A. Suarez Romero 2014-01-20 09:18:28 UTC
Comment on attachment 265454 [details] [review]
raitv: Fix bizarre spacing in function call

commit ff117053577f868e8ae1fd27b26b0795a7ffd654
Author: Bastien Nocera <hadess@hadess.net>
Date:   Mon Jan 6 17:17:17 2014 +0100

    raitv: Fix bizarre spacing in function call
    
    https://bugzilla.gnome.org/show_bug.cgi?id=721642

 src/raitv/grl-raitv.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Comment 8 Juan A. Suarez Romero 2014-01-20 09:22:37 UTC
Comment on attachment 265455 [details] [review]
youtube: Fix potential crasher

commit 5ebf2ac1cbdfd261d9ad93193a4608c0d844d6b9
Author: Bastien Nocera <hadess@hadess.net>
Date:   Mon Jan 6 17:20:59 2014 +0100

    youtube: Fix potential crasher
    
    ytsrc might be uninitialised, so abort early in that case when called
    from read_url_async().
    
    https://bugzilla.gnome.org/show_bug.cgi?id=721642

 src/youtube/grl-youtube.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
Comment 9 Juan A. Suarez Romero 2014-01-20 09:27:13 UTC
Comment on attachment 265456 [details] [review]
tmdb: Fix reversed return arg check

commit 8ddccd23344e0d4500051e89e56f62324568fa7d
Author: Bastien Nocera <hadess@hadess.net>
Date:   Mon Jan 6 17:23:12 2014 +0100

    tmdb: Fix reversed return arg check
    
    grl_tmdb_source_may_resolve() was checking for missing_keys the
    wrong way around.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=721642

 src/tmdb/grl-tmdb.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Comment 10 Juan A. Suarez Romero 2014-01-20 09:32:24 UTC
commit 2064f318657e7ab63f6323e220bf15bdc3db86a3
Author: Bastien Nocera <hadess@hadess.net>
Date:   Mon Jan 6 17:28:15 2014 +0100

    jamendo: Fix potential uninitialised use
    
    https://bugzilla.gnome.org/show_bug.cgi?id=721642

 src/jamendo/grl-jamendo.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)