raitv: Fix possible out-of-bounds array access

get_theme_index_from_id() might return a negative value, which might
end up causing out-of-bounds array accesses.

Instead, assert when get_theme_index_from_id() fails to show that
an internal error occurred.

https://bugzilla.gnome.org/show_bug.cgi?id=721642